@@ -10,8 +10,15 @@ import java.util.Set;
 
 public class PdfGeneratorUtility {
 
-    public static byte[] createPdf(String title, List<Map<String, Object>> data) {
-        Document document = new Document(PageSize.A4);
+    public static byte[] createPdf(String title, List<Map<String, Object>> data, String orientation) {
+
+        Boolean isLandscape = orientation.equals("landscape") ? Boolean.TRUE : Boolean.FALSE;
+        Rectangle pageSize = isLandscape
+                ? PageSize.A4.rotate()   // landscape
+                : PageSize.A4;           // portrait
+
+
+        Document document = new Document(pageSize);
         ByteArrayOutputStream out = new ByteArrayOutputStream();
 
         try {
@@ -30,7 +37,7 @@ public class PdfGeneratorUtility {
                 document.add(new Paragraph("No data available for this report."));
             } else {
                 // Determine columns from the first row keys
-                Set<String> keys = data.get(0).keySet();
+                Set<String> keys = data.getFirst().keySet();
                 PdfPTable table = new PdfPTable(keys.size());
                 table.setWidthPercentage(100);
 
@@ -57,4 +64,5 @@ public class PdfGeneratorUtility {
 
         return out.toByteArray();
     }
+
 }
